--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -20,5 +20,65 @@
 
     <title>Tech book club</title>
   </head>
-  <body></body>
+  <body>
+    <main class="main-container">
+      <section class="hero">
+        <header class="hero__header">
+          <nav class="hero__nav" aria-label="Main logo">
+            <img
+              src="./assets/images/logo.svg"
+              alt=""
+              aria-hidden="true"
+              class="hero__logo"
+            />
+          </nav>
+        </header>
+        <div class="hero__content">
+          <div class="hero__content-info">
+            <h1 class="hero__content-title">
+              Join the ultimate tech book club
+            </h1>
+            <p class="hero__content-description">
+              Turn your reading time into learning time with fellow tech
+              enthusiasts. Get curated recommendations, join vibrant
+              discussions, and level up your skills one chapter at a time.
+            </p>
+            <button
+              class="hero__content-btn"
+              type="button"
+              aria-label="Review membership options"
+            >
+              Review membership options
+              <img
+                src="./assets/images/icon-arrow-down.svg"
+                alt=""
+                aria-hidden="true"
+              />
+            </button>
+            <div class="hero__content-reviews">
+              <img
+                class="hero__content-avatars"
+                src="./assets/images/image-avatars.webp"
+                alt="Avatars of tech book club members"
+              />
+              <div class="hero__content-rating">
+                <img src="./assets/images/icon-star.svg" alt="Star rating" />
+                <img src="./assets/images/icon-star.svg" alt="Star rating" />
+                <img src="./assets/images/icon-star.svg" alt="Star rating" />
+                <img src="./assets/images/icon-star.svg" alt="Star rating" />
+                <img src="./assets/images/icon-star.svg" alt="Star rating" />
+                <p>200+ developers joined already</p>
+              </div>
+            </div>
+          </div>
+          <figure class="hero__content-image">
+            <img
+              src="./assets/images/image-hero-desktop.webp"
+              alt="A group of people reading books"
+            />
+          </figure>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
