Modify grid column & image dimensions hero section

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -71,8 +71,9 @@
               </div>
             </div>
           </div>
-          <figure class="hero__content-image">
+          <figure>
             <img
+              class="hero__content-image"
               src="./assets/images/image-hero-desktop.webp"
               alt="A group of people reading books"
             />
