Modify button style

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -44,7 +44,7 @@
               discussions, and level up your skills one chapter at a time.
             </p>
             <button
-              class="hero__content-btn"
+              class="hero__content-btn primary"
               type="button"
               aria-label="Review membership options"
             >
