Create grid & flexbox extends

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -80,6 +80,8 @@
           </figure>
         </div>
       </section>
+
+      <section class="introduction"></section>
     </main>
   </body>
 </html>
