Complete intro section desktop version

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -81,7 +81,64 @@
         </div>
       </section>
 
-      <section class="introduction"></section>
+      <section class="introduction">
+        <article class="introduction__content">
+          <figure>
+            <img
+              class="introduction__image"
+              src="./assets/images/image-read-together-desktop.webp"
+              alt=""
+            />
+          </figure>
+          <div class="introduction__text">
+            <h2 class="introduction__title">Read together, grow together</h2>
+            <ul class="introduction__list">
+              <li class="introduction__list--item">
+                <img src="./assets/images/icon-check.svg" alt="" />
+                Monthly curated tech reads selected by industry experts
+              </li>
+              <li class="introduction__list--item">
+                <img src="./assets/images/icon-check.svg" alt="" />
+                Virtual and in-person meetups for deep-dive discussions
+              </li>
+              <li class="introduction__list--item">
+                <img src="./assets/images/icon-check.svg" alt="" />
+                Early access to new tech book releases
+              </li>
+              <li class="introduction__list--item">
+                <img src="./assets/images/icon-check.svg" alt="" />
+                Author Q&A sessions with tech thought leaders
+              </li>
+            </ul>
+          </div>
+        </article>
+
+        <article class="introduction__content">
+          <div class="introduction__text">
+            <h3 class="introduction__title">
+              Not your average book <span>club</span>
+            </h3>
+            <p class="introduction__description">
+              Connect with a community that speaks your language - from
+              <span>Python</span>
+              to <span>TypeScript</span> and everything in between. Our
+              discussions blend technical depth with practical applications.
+            </p>
+            <img
+              class="introduction__logos"
+              src="./assets/images/logos-tech.svg"
+              alt=""
+            />
+          </div>
+          <figure>
+            <img
+              class="introduction__image"
+              src="./assets/images/image-not-average-desktop.webp"
+              alt=""
+            />
+          </figure>
+        </article>
+      </section>
     </main>
   </body>
 </html>
