Add breakpoints for a tablet intro section

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -116,7 +116,13 @@
         <article class="introduction__content">
           <div class="introduction__text">
             <h3 class="introduction__title">
-              Not your average book <span>club</span>
+              Not your average book
+              <span
+                ><img
+                  src="./assets/images/pattern-circle.png"
+                  alt=""
+                />club</span
+              >
             </h3>
             <p class="introduction__description">
               Connect with a community that speaks your language - from
