Complete intro section responsiveness

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -117,12 +117,9 @@
           <div class="introduction__text">
             <h3 class="introduction__title">
               Not your average book
-              <span
-                ><img
-                  src="./assets/images/pattern-circle.png"
-                  alt=""
-                />club</span
-              >
+              <div>
+                <img src="./assets/images/pattern-circle.png" alt="" />club
+              </div>
             </h3>
             <p class="introduction__description">
               Connect with a community that speaks your language - from
