Create journey section

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -142,6 +142,41 @@
           </figure>
         </article>
       </section>
+
+      <section class="journey">
+        <header>
+          <h2 class="journey__title">Your tech reading journey</h2>
+        </header>
+        <div class="journey__steps">
+          <div class="journey__step">
+            <div class="journey__step--number">
+              <span>1</span>
+              <img src="./assets/images/pattern-arrow.svg" alt="" />
+            </div>
+            <p>Choose your membership tier</p>
+          </div>
+          <div class="journey__step">
+            <div class="journey__step--number">
+              <span>2</span>
+              <img src="./assets/images/pattern-arrow.svg" alt="" />
+            </div>
+            <p>Get your monthly book selection</p>
+          </div>
+          <div class="journey__step">
+            <div class="journey__step--number">
+              <span>3</span>
+              <img src="./assets/images/pattern-arrow.svg" alt="" />
+            </div>
+            <p>Join our discussions forums</p>
+          </div>
+          <div class="journey__step">
+            <div class="journey__step--number">
+              <span>4</span>
+            </div>
+            <p>Attend exclusive meetups</p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
