Complete pricing section desktop version

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -177,6 +177,66 @@
           </div>
         </div>
       </section>
+
+      <aside class="pricing">
+        <header>
+          <h2 class="pricing__header">Membership options</h2>
+        </header>
+        <section class="pricing__options">
+          <div class="pricing__option pricing__option--starter">
+            <h3 class="pricing__option--title">Starter</h3>
+            <p class="pricing__option--price">$19<span>/month</span></p>
+            <hr />
+            <ul class="pricing__option--list">
+              <li class="pricing__option--list-item">
+                <img src="./assets/images/icon-check.svg" alt="" /> 1 book/month
+              </li>
+              <li class="pricing__option--list-item">
+                <img src="./assets/images/icon-check.svg" alt="" /> Online
+                forums
+              </li>
+            </ul>
+            <button class="pricing__option--btn primary" type="button">
+              Subscribe now
+            </button>
+          </div>
+          <div class="pricing__option pricing__option--pro">
+            <h3 class="pricing__option--title">Pro</h3>
+            <p class="pricing__option--price">$29<span>/month</span></p>
+            <hr />
+            <ul class="pricing__option--list">
+              <li class="pricing__option--list-item">
+                <img src="./assets/images/icon-check.svg" alt="" /> 2
+                books/month
+              </li>
+              <li class="pricing__option--list-item">
+                <img src="./assets/images/icon-check.svg" alt="" /> Virtual
+                meetups
+              </li>
+            </ul>
+            <button class="pricing__option--btn primary" type="button">
+              Subscribe now
+            </button>
+          </div>
+          <div class="pricing__option pricing__option--enterprise">
+            <h3 class="pricing__option--title">Enterprise</h3>
+            <p class="pricing__option--price">Custom</p>
+            <hr />
+            <ul class="pricing__option--list">
+              <li class="pricing__option--list-item">
+                <img src="./assets/images/icon-check.svg" alt="" /> Team access
+              </li>
+              <li class="pricing__option--list-item">
+                <img src="./assets/images/icon-check.svg" alt="" /> Private
+                sessions
+              </li>
+            </ul>
+            <button class="pricing__option--btn primary" type="button">
+              Talk to us
+            </button>
+          </div>
+        </section>
+      </aside>
     </main>
   </body>
 </html>
