--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -237,6 +237,22 @@
           </div>
         </section>
       </aside>
+
+      <blockquote class="review">
+        <div class="review__stars">
+          <img src="./assets/images/icon-star.svg" alt="" />
+          <img src="./assets/images/icon-star.svg" alt="" />
+          <img src="./assets/images/icon-star.svg" alt="" />
+          <img src="./assets/images/icon-star.svg" alt="" />
+          <img src="./assets/images/icon-star.svg" alt="" />
+        </div>
+        <q class="review__description"
+          >This book club transformed my technical reading from a solitary
+          activity into an enriching community experience. The discussions are
+          gold!</q
+        >
+        <p class="review__author">Sarah Chen, Software Architect</p>
+      </blockquote>
     </main>
   </body>
 </html>
