--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -240,11 +240,11 @@
 
       <blockquote class="review">
         <div class="review__stars">
-          <img src="./assets/images/icon-star.svg" alt="" />
-          <img src="./assets/images/icon-star.svg" alt="" />
-          <img src="./assets/images/icon-star.svg" alt="" />
-          <img src="./assets/images/icon-star.svg" alt="" />
-          <img src="./assets/images/icon-star.svg" alt="" />
+          <img src="./assets/images/icon-star.svg" alt="Five star image" />
+          <img src="./assets/images/icon-star.svg" alt="Five star image" />
+          <img src="./assets/images/icon-star.svg" alt="Five star image" />
+          <img src="./assets/images/icon-star.svg" alt="Five star image" />
+          <img src="./assets/images/icon-star.svg" alt="Five star image" />
         </div>
         <q class="review__description"
           >This book club transformed my technical reading from a solitary
@@ -254,5 +254,56 @@
         <p class="review__author">Sarah Chen, Software Architect</p>
       </blockquote>
     </main>
+
+    <footer class="footer">
+      <div class="footer__content">
+        <header class="footer__header">
+          <h2 class="footer__title">Ready to debug your reading list?</h2>
+          <button class="footer__btn alternate">
+            Review membership options
+            <img src="./assets/images/icon-arrow-up.svg" alt="" />
+          </button>
+        </header>
+
+        <section class="footer__review">
+          <img
+            class="footer__review-avatar"
+            src="./assets/images/image-avatars.webp"
+            alt="Reviewers avatar"
+          />
+          <div class="footer__review-info">
+            <img
+              src="./assets/images/icon-star.svg"
+              alt="Five star review star image"
+            />
+            <img
+              src="./assets/images/icon-star.svg"
+              alt="Five star review star image"
+            />
+            <img
+              src="./assets/images/icon-star.svg"
+              alt="Five star review star image"
+            />
+            <img
+              src="./assets/images/icon-star.svg"
+              alt="Five star review star image"
+            />
+            <img
+              src="./assets/images/icon-star.svg"
+              alt="Five star review star image"
+            />
+            <p>200+ developers joined already</p>
+          </div>
+        </section>
+      </div>
+      <hr />
+      <section class="footer__copyright">
+        <p class="footer__copyright-author">&copy; 2024 - Tech Book Club</p>
+        <div class="footer__copyright-links">
+          <img src="./assets/images/logo-bluesky.svg" alt="Blue sky logo" />
+          <img src="./assets/images/logo-linkedin.svg" alt="LinkedIn logo" />
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
