Complete hero section renewal tablet version

--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
           </nav>
         </header>
         <div class="hero__content">
-          <div class="content__info">
-            <h1 class="content__title">Join the ultimate tech book club</h1>
+          <div class="content content__info">
+            <h1 class="content__title">
+              Join the <br />
+              ultimate tech book club
+            </h1>
             <p class="content__description">
               Turn your reading time into learning time with fellow tech
               enthusiasts. Get curated recommendations, join vibrant
