Complete introduction section renewal mobile version

--- a/index.html
+++ b/index.html
@@ -74,82 +74,101 @@
           </div>
           <picture class="content__image">
             <source
-              srcset="./assets/desktop/Hero Image.png"
+              srcset="./assets/images/image-hero-desktop.webp"
               media="(min-width: 64em)"
             />
             <source
-              srcset="./assets/tablet/Hero Image.png"
+              srcset="./assets/images/image-hero-tablet.webp"
               media="(min-width: 48em)"
             />
             <img
-              src="./assets/mobile/Hero Image.jpg"
+              src="./assets/images/image-hero-mobile.webp"
               alt="A group of people discussing over a book"
             />
           </picture>
         </div>
       </section>
 
-      <!-- <section class="introduction"> -->
-      <!--   <article class="introduction__content"> -->
-      <!--     <figure> -->
-      <!--       <img -->
-      <!--         class="introduction__image" -->
-      <!--         src="./assets/images/image-read-together-desktop.webp" -->
-      <!--         alt="" -->
-      <!--       /> -->
-      <!--     </figure> -->
-      <!--     <div class="introduction__text"> -->
-      <!--       <h2 class="introduction__title">Read together, grow together</h2> -->
-      <!--       <ul class="introduction__list"> -->
-      <!--         <li class="introduction__list--item"> -->
-      <!--           <img src="./assets/images/icon-check.svg" alt="" /> -->
-      <!--           Monthly curated tech reads selected by industry experts -->
-      <!--         </li> -->
-      <!--         <li class="introduction__list--item"> -->
-      <!--           <img src="./assets/images/icon-check.svg" alt="" /> -->
-      <!--           Virtual and in-person meetups for deep-dive discussions -->
-      <!--         </li> -->
-      <!--         <li class="introduction__list--item"> -->
-      <!--           <img src="./assets/images/icon-check.svg" alt="" /> -->
-      <!--           Early access to new tech book releases -->
-      <!--         </li> -->
-      <!--         <li class="introduction__list--item"> -->
-      <!--           <img src="./assets/images/icon-check.svg" alt="" /> -->
-      <!--           Author Q&A sessions with tech thought leaders -->
-      <!--         </li> -->
-      <!--       </ul> -->
-      <!--     </div> -->
-      <!--   </article> -->
-      <!---->
-      <!--   <article class="introduction__content"> -->
-      <!--     <div class="introduction__text"> -->
-      <!--       <h3 class="introduction__title"> -->
-      <!--         Not your average book -->
-      <!--         <div> -->
-      <!--           <img src="./assets/images/pattern-circle.png" alt="" />club -->
-      <!--         </div> -->
-      <!--       </h3> -->
-      <!--       <p class="introduction__description"> -->
-      <!--         Connect with a community that speaks your language - from -->
-      <!--         <span>Python</span> -->
-      <!--         to <span>TypeScript</span> and everything in between. Our -->
-      <!--         discussions blend technical depth with practical applications. -->
-      <!--       </p> -->
-      <!--       <img -->
-      <!--         class="introduction__logos" -->
-      <!--         src="./assets/images/logos-tech.svg" -->
-      <!--         alt="" -->
-      <!--       /> -->
-      <!--     </div> -->
-      <!--     <figure> -->
-      <!--       <img -->
-      <!--         class="introduction__image" -->
-      <!--         src="./assets/images/image-not-average-desktop.webp" -->
-      <!--         alt="" -->
-      <!--       /> -->
-      <!--     </figure> -->
-      <!--   </article> -->
-      <!-- </section> -->
+      <section class="introduction">
+        <article class="introduction__content">
+          <div class="introduction__text">
+            <h2 class="introduction__title">
+              Read together, <br />
+              grow together
+            </h2>
+            <ul class="introduction__list">
+              <li class="introduction__list--item">
+                <img src="./assets/images/icon-check.svg" alt="" />
+                Monthly curated tech reads selected by industry experts
+              </li>
+              <li class="introduction__list--item">
+                <img src="./assets/images/icon-check.svg" alt="" />
+                Virtual and in-person meetups for deep-dive discussions
+              </li>
+              <li class="introduction__list--item">
+                <img src="./assets/images/icon-check.svg" alt="" />
+                Early access to new tech book releases
+              </li>
+              <li class="introduction__list--item">
+                <img src="./assets/images/icon-check.svg" alt="" />
+                Author Q&A sessions with tech thought leaders
+              </li>
+            </ul>
+          </div>
+
+          <picture class="introduction__image">
+            <source
+              srcset="./assets/images/image-read-together-desktop.webp"
+              media="(min-width: 64em)"
+            />
+            <source
+              srcset="./assets/images/image-read-together-tablet.webp"
+              media="(min-width: 48em)"
+            />
+            <img
+              src="./assets/images/image-read-together-mobile.webp"
+              alt="A group of people reading books together"
+            />
+          </picture>
+        </article>
+
+        <article class="introduction__content">
+          <div class="introduction__text">
+            <h3 class="introduction__title">
+              Not your average <br />
+              book
+              <div>
+                <img src="./assets/images/pattern-circle.png" alt="" />club
+              </div>
+            </h3>
+            <p class="introduction__description">
+              Connect with a community that speaks your language - from
+              <span>Python</span>
+              to <span>TypeScript</span> and everything in between. Our
+              discussions blend technical depth with practical applications.
+            </p>
+            <img
+              class="introduction__logos"
+              src="./assets/images/logos-tech.svg"
+              alt="Github, typescript, and react logos image"
+            />
+          </div>
+          <picture class="introduction__image">
+            <source
+              srcset="./assets/images/image-not-average-desktop.webp"
+              media="(min-width: 64em)"
+            />
+            <source
+              srcset="./assets/images/image-not-average-tablet.webp"
+              media="(min-width: 48em)"
+            />
+            <img
+              src="./assets/images/image-not-average-mobile.webp"
+              alt="A group of people reading books together"
+            />
+          </picture>
+        </article>
+      </section>
 
       <!-- <section class="journey"> -->
       <!--   <header> -->
