Complete introduction section renewal tablet version

--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
         <article class="introduction__content">
           <div class="introduction__text">
             <h3 class="introduction__title">
-              Not your average <br />
-              book
+              Not your average book
               <div>
                 <img src="./assets/images/pattern-circle.png" alt="" />club
               </div>
@@ -147,11 +146,6 @@
               to <span>TypeScript</span> and everything in between. Our
               discussions blend technical depth with practical applications.
             </p>
-            <img
-              class="introduction__logos"
-              src="./assets/images/logos-tech.svg"
-              alt="Github, typescript, and react logos image"
-            />
           </div>
           <picture class="introduction__image">
             <source
@@ -167,6 +161,11 @@
               alt="A group of people reading books together"
             />
           </picture>
+          <img
+            class="introduction__logos"
+            src="./assets/images/logos-tech.svg"
+            alt="Github, typescript, and react logos image"
+          />
         </article>
       </section>
 
