--- a/index.html
+++ b/index.html
@@ -92,10 +92,7 @@
       <section class="introduction">
         <article class="introduction__content">
           <div class="introduction__text">
-            <h2 class="introduction__title">
-              Read together, <br />
-              grow together
-            </h2>
+            <h2 class="introduction__title">Read together, grow together</h2>
             <ul class="introduction__list">
               <li class="introduction__list--item">
                 <img src="./assets/images/icon-check.svg" alt="" />
