--- a/index.html
+++ b/index.html
@@ -168,7 +168,10 @@
 
       <section class="journey">
         <header>
-          <h2 class="journey__title">Your tech reading journey</h2>
+          <h2 class="journey__title">
+            Your tech <br />
+            reading journey
+          </h2>
         </header>
         <div class="journey__steps">
           <div class="journey__step">
