Complete review section renewal mobile version

--- a/index.html
+++ b/index.html
@@ -264,21 +264,21 @@
         </section>
       </aside>
 
-      <!-- <blockquote class="review"> -->
-      <!--   <div class="review__stars"> -->
-      <!--     <img src="./assets/images/icon-star.svg" alt="Five star image" /> -->
-      <!--     <img src="./assets/images/icon-star.svg" alt="Five star image" /> -->
-      <!--     <img src="./assets/images/icon-star.svg" alt="Five star image" /> -->
-      <!--     <img src="./assets/images/icon-star.svg" alt="Five star image" /> -->
-      <!--     <img src="./assets/images/icon-star.svg" alt="Five star image" /> -->
-      <!--   </div> -->
-      <!--   <q class="review__description" -->
-      <!--     >This book club transformed my technical reading from a solitary -->
-      <!--     activity into an enriching community experience. The discussions are -->
-      <!--     gold!</q -->
-      <!--   > -->
-      <!--   <p class="review__author">Sarah Chen, Software Architect</p> -->
-      <!-- </blockquote> -->
+      <blockquote class="review">
+        <div class="review__stars">
+          <img src="./assets/images/icon-star.svg" alt="Five star image" />
+          <img src="./assets/images/icon-star.svg" alt="Five star image" />
+          <img src="./assets/images/icon-star.svg" alt="Five star image" />
+          <img src="./assets/images/icon-star.svg" alt="Five star image" />
+          <img src="./assets/images/icon-star.svg" alt="Five star image" />
+        </div>
+        <q class="review__description"
+          >This book club transformed my technical reading from a solitary
+          activity into an enriching community experience. The discussions are
+          gold!</q
+        >
+        <p class="review__author">Sarah Chen, Software Architect</p>
+      </blockquote>
     </main>
 
     <!-- <footer class="footer"> -->
